@@ -2,11 +2,21 @@ TO DO
 
 + before 4.0pre8:
 
+- if bsh replace returns null, it just beeps
+
+- rename MacOS.jar
+- scroll to caret _still_ jumps around
+
+- fix stylesheet problem
 - proofread documentation one more time
 - make sure plugin guide is up to date
-- scroll to caret _still_ jumps around
-- rename MacOS.jar
-- fix stylesheet problem
+- API guide: compareStrings(), showPopupMenu()
+- MiscUtilities path name methods need to be documented
+- appendix in plugin guide on contributing plugins
+
++ in 4.1:
+
+- fix GUIUtilities.java to store maximisation state
 - regexp search problems:
   - hypersearch for .*$: only finds random lines
   - hypersearch for .*: only finds non-empty lines
@@ -18,13 +28,6 @@ TO DO
   - loadGeometry(): bad
   - dockable windows
   - getCenterPoint()
-- API guide: compareStrings(), showPopupMenu()
-- MiscUtilities path name methods need to be documented
-- appendix in plugin guide on contributing plugins
-- maybe fix GUIUtilities.java to store maximisation state
-
-+ in 4.1:
-
 - 'new plugins installed' thingy on startup
 - text file previews in file dialog?
 - plugin guide: mention fully qualified class names
